Fix items list display with overflow auto

--- a/src/css/itemsContainer.css
+++ b/src/css/itemsContainer.css
@@ -7,6 +7,10 @@
   min-width: 200px;
   min-width: 300px;
 }
+.items-list-container {
+  overflow: auto;
+  height: calc(100% - 161px);
+}
 .items-list-container, .items-buttons-container {
   display: flex;
   position: fixed;
@@ -14,7 +18,6 @@
   width: 70%;
   max-width: calc(100% - 200px);
   min-width: calc(100% - 300px);
-  overflow: auto;
 }
 .items-buttons-container {
   border-top: 1px solid rgb(123, 156, 255);
